post:pegação: erros gramáticos

--- a/_posts/2017-03-05-pegação.md
+++ b/_posts/2017-03-05-pegação.md
@@ -3,8 +3,8 @@ da casa até ao final da orla, onde o mar começa aos poucos a cobrir a areia at
 Lá, onde fica o malfamado porto.
 
 Até ontem, esta má fama só veio à tona por monturos de embalagens rasgadas de
-camisinhas com todos os sabores possíveis (menta, morango, cupuaçu, açaí);
-empilhados toda noite, aplainados toda manhã.
+camisinhas com todos os sabores possíveis: menta, morango, cupuaçu, açaí.
+(Empilhados toda noite, aplainados toda manhã.)
 
 Mas hoje encarnou-se.
 
@@ -16,8 +16,7 @@ Conversando com o outro pessoal passando e observando este espectáculo aí, dei
 Ao voltar da ponta de terra, pedi lhe informação sobre o custo deste serviço.
 Como ela não podia falar nem gesticular muito, só levantou a mão e indicou com os dedos:
 5 Reais.
-Eu diria de graça.
-Um carimbo no cartório sai mais caro.
+Quanto ao custo-benefício, observamos que um carimbo no cartório sai mais caro.
 
 Entretanto, o contador perdeu paciência, enrolou seus pertences e terminou o espectáculo.
 
@@ -34,12 +33,12 @@ Visivelmente absorvido, de um olhar oco, respondeu brevemente:
 - O magrinho finalmente respondeu com mais calma e atenção:
 "Pegação é curtição.
 Qualquer mocinha, homem ou intersexual pode vir para cá para a gente deleitar-se.
-Leve a família toda!
+Traga a família toda!
 Basta ir ao final da orla a partir da tarde, acaba só pela manhã."
 
 É bom saber.
-Agora, estranho, pensei que as mulheres não se seduzem por punheta pública, mesmo se fosse na praia.
-(Mas talvez só falta coragem.)
+Só pensei que as mulheres não se seduzem por punheta pública, mesmo se fosse na praia.
+(Mas talvez só falte coragem.)
 
 Achei que a chave para fazer pular os seus corações era outra:
 o carro de som.
